# shikaku

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml
scripts/: make-release.sh
shikaku/: __init__.py  _version.py  loader.py  textmodel.py  utils.py  wordcloud.py
tests/: test_loader.py  test_textmodel.py  test_utils.py  test_wordcloud.py
